Upgrade to 2.3.4